<resources>
    <string name="app_name">GtsMedicalCompany</string>
    <string name="laboratories">الأشعة و التحاليل</string>
    <string name="home">Home</string>
    <string name="user_account">الحساب الشخصي</string>
    <string name="todo">TODO</string>
    <string name="login">تسجيل الدخول</string>
    <string name="details">أضف تفاصيلك الأن</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="new_user">مشترك جديد</string>
    <string name="login_text">إذا كنت مشترك جديد سجل الأن</string>
    <string name="signUptext">لإتمام التسجيل</string>
    <string name="joinNow">انضم الأن</string>
    <string name="confirmPassword">تأكيد كلمة المرور</string>
    <string name="userEmail">البريد الالكتروني</string>
    <string name="nationalID">الرقم القومي</string>
    <string name="phoneNumber">رقم الهاتف</string>
    <string name="address">العنوان</string>
    <string name="privacyText">شروط الخصوصية</string>
    <string name="fakeText">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet</string>
    <string name="accept">موافق</string>
    <string name="back">رجوع</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xraysFragmentTitile">بيان الأشعة و التحاليل</string>
    <string name="userAccountTitle">الحساب الشخصي</string>
    <string name="userFullName">الاسم الرباعي</string>
    <string name="analysisType">نوع التحاليل</string>
    <string name="xrayType">نوع الأشعة</string>
    <string name="requestNowText">اطلب الأن</string>
    <string name="updateInfo">تحديث البيانات</string>
    <string name="doctorName">دكتور محمد مصطفي</string>
    <string name="postTime">3 hour ago</string>
    <string name="postDesc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</string>
    <string name="nameEmpty">name is required filed !</string>
    <string name="addressEmpty">address is required filed !</string>
    <string name="phoneEmpty">phone is required filed !</string>
    <string name="nationalDEmpty">national id is required filed !</string>
    <string name="phoneNotValied">Phone Number Must be in 10 Length</string>
    <string name="emailEmpty">email is required filed !</string>
    <string name="emailInvalied">Invalid Email Address!!</string>
    <string name="passwordEmpty">password is required filed !</string>
    <string name="passwordInvalied">Invalid Password!!</string>
    <string name="samePassword">Check your password and confirm password is the same or not..</string>
    <string name="waiting"> إنتظر قليلا…</string>
    <string name="exit">خروج</string>
    <string name="edit">تعديل</string>
    <string name="confirmed_request">الطلبات المؤكدة</string>
    <string name="search">Search</string>
    <string name="search_hint">أدخل إسم المعمل هنا..</string>
    <string name="undo">تراجع</string>
    <string name="request">الطلبات المؤكدة</string>
    <string name="payment_text">دفع</string>

</resources>