<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".ui.activities.FillXrayDetailsActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/almarai_bold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/xraysFragmentTitile"
        android:textColor="@color/colorDark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnArrowToBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_text_shape"
            android:fontFamily="@font/almarai_light"
            android:gravity="start"
            android:hint="@string/userFullName"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/Grey"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_text_shape"
            android:fontFamily="@font/almarai_light"
            android:gravity="start"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/Grey"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_text_shape"
            android:fontFamily="@font/almarai_light"
            android:gravity="start"
            android:hint="@string/phoneNumber"
            android:inputType="number"
            android:padding="8dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/Grey"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_text_shape"
            android:fontFamily="@font/almarai_light"
            android:gravity="start"
            android:hint="@string/userEmail"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/Grey"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etXrayType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/xrayType"
            app:hintTextColor="@color/Grey">

            <AutoCompleteTextView
                android:id="@+id/xRayTypeAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="none"
                android:padding="10dp"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/analysisType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/analysisType"
            app:hintTextColor="@color/Grey">

            <AutoCompleteTextView
                android:id="@+id/analysisTypeAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="none"
                android:padding="10dp"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageRequestOffered"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_microscope"
        app:layout_constraintBottom_toTopOf="@+id/btnRequestXrayOffered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:shapeAppearanceOverlay="@style/RoundedSquare" />

    <Button
        android:id="@+id/btnRequestXrayOffered"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/custom_button_background"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/requestNowText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dummyView2" />

    <View
        android:id="@+id/dummyView2"
        android:layout_width="20dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnExitDialog" />

    <Button
        android:id="@+id/btnExitDialog"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_button_background"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/payment_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:alpha="0.8"
        app:layout_constraintEnd_toStartOf="@id/dummyView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnRequestXrayOffered" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>