<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/guideline4">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="30sp"
            android:padding="5dp"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/almarai_bold"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="8dp"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/almarai_light"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="start"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:hint="@string/user_name"
            android:textColorHint="@color/Grey"
            android:padding="8dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_text_shape"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/almarai_light"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="end"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:hint="@string/password"
            android:padding="8dp"
            android:textColorHint="@color/Grey"
            android:inputType="textWebPassword"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/input_text_shape"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/almarai_light"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnUserLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/almarai_bold"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_shape1"
            />

        <Button
            android:id="@+id/btnUserCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/new_user"
            android:textColor="@color/colorButton"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/almarai_bold"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_shape2"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:gravity="center"
            android:textSize="17sp"
            android:padding="8dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/almarai_bold"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>