<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/post_background_shape"
    android:elevation="10dp"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/postUserImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/user_image"
            app:civ_border_color="@color/colorButton"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPostName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_bold"
                android:text="@string/doctorName"
                android:textColor="@color/colorDark"
                android:textSize="17sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPostDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:drawableStart="@drawable/ic_baseline_public_24"
                android:drawablePadding="6dp"
                android:fontFamily="@font/almarai_light"
                android:text="@string/postTime"
                android:textColor="@color/colorDark"
                android:textSize="15sp" />

        </LinearLayout>



    </LinearLayout>


    <ImageView
        android:id="@+id/postMenuIcon"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_menu"
        app:layout_constraintTop_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPostDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/almarai_light"
        android:textColor="@color/colorDark"
        android:textSize="17sp"
        android:text="@string/postDesc"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/postDescImage"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/post_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPostDesc"
        app:shapeAppearanceOverlay="@style/RoundedSquare" />

    <Button
        android:id="@+id/btnRequestXray"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_shape1"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/requestNowText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postDescImage" />


</androidx.constraintlayout.widget.ConstraintLayout>