<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_image"
    tools:context=".ui.fragments.UserAccountFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/almarai_bold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/userAccountTitle"
        android:textColor="@color/colorDark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfilePhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24"
                app:civ_border_color="@color/colorButton"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialTextView2" />

            <ImageButton
                android:id="@+id/ChangeUserProfilePhoto"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:background="@drawable/camer_btn_shape"
                android:src="@drawable/ic_round_camera_alt_24"
                app:layout_constraintBottom_toBottomOf="@id/userProfilePhoto"
                app:layout_constraintEnd_toEndOf="@id/userProfilePhoto"
                app:tint="@color/colorDark" />

<View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="15dp"
    android:background="@drawable/profile_ui_shape"
    android:orientation="vertical"
    android:padding="10dp"
    android:alpha="0.4"
    app:layout_constraintBottom_toTopOf="@+id/btnUserSignUp"
    app:layout_constraintTop_toBottomOf="@+id/userProfilePhoto"
    />
    <LinearLayout
        android:id="@+id/SecondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnUserSignUp"
        app:layout_constraintTop_toBottomOf="@+id/userProfilePhoto">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/inputtext_shape"
            android:inputType="textPersonName"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorDark"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:paddingEnd="10dp"
            android:gravity="start|center"
            android:paddingStart="10dp"
        />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUserAddress"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/inputtext_shape"
            android:inputType="textPersonName"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorDark"
            android:textSize="20sp"
            android:paddingEnd="10dp"
            android:gravity="start|center"
            android:paddingStart="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUserPhone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/inputtext_shape"
            android:inputType="textPersonName"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorDark"
            android:textSize="20sp"
            android:paddingEnd="10dp"
            android:gravity="start|center"
            android:paddingStart="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/inputtext_shape"
            android:inputType="textPersonName"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorDark"
            android:textSize="20sp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="start|center"
            android:paddingStart="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnUserSignUp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/button_shape1"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/updateInfo"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        tools:layout_editor_absoluteX="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

